fix: fixed img position on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,7 @@ a:hover {
 .indexMain {
     display: flex;
     flex-direction: row;
+    align-content: center;
     flex: 1 1 auto;
     max-width: 1200px;
     margin-left: auto;
@@ -85,10 +86,10 @@ a:hover {
 
 }
 
-#startMessage {
+.startMessage {
     display: flex;
     flex-direction: column;
-    margin-top: 100px;
+    justify-content: space-evenly;
     color: black;
     text-align: center;
 }
@@ -101,9 +102,6 @@ a:hover {
     font-size: 24px;
 }
 
-#mainPageImg {
-    margin-top: 150px;
-}
 /* menu.html styles */
 .menuMain {
     display: flex;
